@@ -1,3 +1,8 @@
+Thu Oct 21 12:31:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
+          Added an empty group for user defined operations
+
 Thu Oct 21 12:32:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
